fixed bug where upon manually highlighting text and copying, the copied content would have both - the text from the visible and invisible elements. This bug can be reproduced by attempting to copy from the bottom of the text

--- a/website/src/components/columns/resultColumn/copyButton/copyButtonWrapper.css
+++ b/website/src/components/columns/resultColumn/copyButton/copyButtonWrapper.css
@@ -5,6 +5,7 @@
 
 .text-no-whitespace {
   opacity: 0;
+  user-select: none;
 }
 
 .text-with-whitespace {
